# UBManager

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  UBM.cpp
.buildtools/cmake/: ubm.cmake
docs/: README.md  TODO.md
include/common/: LogHandeler.h  global.h
include/modules/: FileHandeler.h
src/: app.cpp  fmManager.cpp
src/common/: LogHandeler.cpp  global.cpp
src/modules/: FileHandeler.cpp
